--- a/NAAN/report/xhtml2pdfapp/templates/xhtml2pdfapp/replacement_order.html
+++ b/NAAN/report/xhtml2pdfapp/templates/xhtml2pdfapp/replacement_order.html
@@ -7,12 +7,13 @@
         <title>Replacement Order</title>
         <style>
             @font-face {
-                font-family: sans-serif;
-                src: url("/mnt/d/Test_Django_Report/NAAN/report_2/xhtml2pdfapp/templates/xhtml2pdfapp/fonts/THSarabunNew.ttf");
-                font-weight: bold;
+                font-family: THSarabunNew, sans-serif;
+                src: url("/mnt/d/Test_Django_Report/NAAN/report/xhtml2pdfapp/templates/xhtml2pdfapp/fonts/THSarabunNew.ttf");
+                font-weight: bolder;
             }
             body {                
                 font-family: THSarabunNew, sans-serif;
+                font-weight: bolder;
             }        
             @page{
             size:a4 landscape;
@@ -52,14 +53,14 @@
                 }
                 @frame barcode_right_header_frame {
                     -pdf-frame-content:barcode;
-                    left: 17cm;
+                    left: 23.5cm;
                     width:15cm;
                     top:3.5cm;
                 }
                
                 @frame detail_right_header_frame {
                     -pdf-frame-content:header_detail_right;
-                    left: 17.6cm;
+                    left: 21.68cm;
                     width:15cm;
                     top:4.8cm;
                 }
@@ -67,13 +68,13 @@
                     -pdf-frame-content:thead_table;
                     left: 1cm;                    
                     width:27.5cm;
-                    top:6cm;                    
+                    top:6cm;                                  
                 }
                 @frame content_frame {
                     left:1cm;
                     right:1cm;
                     width:27.5cm;
-                    top:8.55cm;
+                    top:88.8mm;
                     height:7cm;
                 }
                 @frame footer_frame {
@@ -81,23 +82,21 @@
                     left:3cm;
                     right:2cm;
                     width:20cm;
-                    top:3cm;
+                    top:3.2cm;
                     height:7cm;
                 }
-
                 @frame footer1_frame {
                     -pdf-frame-content:footer1;
                     left:3cm;
                     width:5cm;
-                    top:16cm;
+                    top:16.3cm;
                     height:5cm;
                 }
-
                 @frame footer2_frame {
                     -pdf-frame-content:footer2;
                     left:13cm;
                     width:3.5cm;
-                    top:16cm;
+                    top:16.3cm;
                     height:5cm;
                 }
 
@@ -105,12 +104,10 @@
                     -pdf-frame-content:footer3;
                     left:23cm;
                     width:3cm;
-                    top:16cm;
+                    top:16.3cm;
                     height:5cm;
-                }
-                
-            }
-            
+                }                
+            }            
             thead {display:table-header-group;}
             tbody {display:table-row-group;}
             tfoot {display: table-footer-group;}
@@ -125,15 +122,14 @@
             }
             th, td {
                 font-family: THSarabunNew, sans-serif;
-                
                 text-align: center;
                 padding: 3px;
                 border: 1px solid #ddd;
-                font-family: 'Prompt', sans-serif;
-                font-size: 12px;
+                font-size: 14px;
             }
             th{
                 padding: 3px;
+                font-size: 14px;
             }   
         </style>
     </head>
@@ -149,13 +145,13 @@
                 <h2 style="font-size: 48px;"><b></b>Replacement Order Number</b></h2>
             </div>
             <div id="header_detail_left" style="font-size: 18px;">
-                <p>Replacement Date (วันที่ส่งของทดแทน):</p>                
+                <p>Replacement Date (วันที่ส่งของทดแทน) :</p>                
             </div>
             <div id="barcode">
                 <pdf:barcode value="RN-202009-001" type="code128" barheight="1cm"></pdf:barcode>   
             </div>
             <div id="header_detail_right" style="font-size: 18px;">        
-                <p>Replecement No. (เลขที่เอกสาร):</p>                    
+                <p>Replecement No. (เลขที่เอกสาร) : RN-202009-001</p>                    
             </div> 
         </div>             
         <div id="thead_table">
@@ -175,12 +171,11 @@
                     <th>Receive Qty.<br>(จำนวนรับ)</th>         
                 </tr>           
             </table>            
-        </div>
-        
+        </div>        
         <table>
             <tr>
                 <td style="width: 2cm;">1</td>
-                <td style="width: 3.5cm;">xxxxx</td>
+                <td style="width: 3.5cm;">กกกกกกกกก</td>
                 <td style="width: 3.5cm;">yyyyy</td>
                 <td style="width: 3.5cm;">dfsfd</td>
                 <td style="width: 3cm;">dfsfd</td>
@@ -256,7 +251,18 @@
                 <td>dfsfd</td>
             </tr>
             <tr>
-                <td>7</td>
+                <td>8</td>
+                <td>xxxxx</td>
+                <td>yyyyy</td>
+                <td>dfsfd</td>
+                <td>dfsfd</td>
+                <td>xxxxx</td>
+                <td>yyyyy</td>
+                <td>dfsfd</td>
+                <td>dfsfd</td>
+            </tr>            
+            <tr>
+                <td>9</td>
                 <td>xxxxx</td>
                 <td>yyyyy</td>
                 <td>dfsfd</td>
@@ -268,7 +274,7 @@
             </tr>
             
             <tr>
-                <td>7</td>
+                <td>10</td>
                 <td>xxxxx</td>
                 <td>yyyyy</td>
                 <td>dfsfd</td>
@@ -280,7 +286,7 @@
             </tr>
             
             <tr>
-                <td>7</td>
+                <td>11</td>
                 <td>xxxxx</td>
                 <td>yyyyy</td>
                 <td>dfsfd</td>
@@ -292,7 +298,7 @@
             </tr>
             
             <tr>
-                <td>7</td>
+                <td>12</td>
                 <td>xxxxx</td>
                 <td>yyyyy</td>
                 <td>dfsfd</td>
@@ -301,10 +307,9 @@
                 <td>yyyyy</td>
                 <td>dfsfd</td>
                 <td>dfsfd</td>
-            </tr>
-            
+            </tr>            
             <tr>
-                <td>7</td>
+                <td>13</td>
                 <td>xxxxx</td>
                 <td>yyyyy</td>
                 <td>dfsfd</td>
@@ -314,51 +319,22 @@
                 <td>dfsfd</td>
                 <td>dfsfd</td>
             </tr>
-            
-            <tr>
-                <td>7</td>
-                <td>xxxxx</td>
-                <td>yyyyy</td>
-                <td>dfsfd</td>
-                <td>dfsfd</td>
-                <td>xxxxx</td>
-                <td>yyyyy</td>
-                <td>dfsfd</td>
-                <td>dfsfd</td>
-            </tr>
-            
-
-
-
-        
-            
-           
-            
-            
-            
-      
-            </table>
-        
+        </table>        
         
     <div id="footer_content" style="font-size: 18px;">
             <div id="footer1" style="text-align: center;">
                 <p>ลงรายมือชื่อ-ผู้ส่ง</p>
-                <br>
-                
-                <p>Truck Controller (KOCH)<br>(เจ้าหน้าที่ประสานงานลูกค้า)</p>
-                  
+                <br>                
+                <p>Truck Controller (KOCH)<br>(เจ้าหน้าที่ประสานงานลูกค้า)</p>                  
             </div>
             <div id="footer2" style="text-align: center;">                    
                 <p>ลงรายมือชื่อ-ขนส่ง</p>
-                <br>
-                
-                <p>Driver (พนักงานขับรถ)<br>(ผู้นำส่งสินค้า)</p>
-                                   
+                <br>                
+                <p>Driver (พนักงานขับรถ)<br>(ผู้นำส่งสินค้า)</p>                                   
             </div>
             <div id="footer3" style="text-align: center;">                    
                 <p>ลงรายมือชื่อ-ผู้รับ</p>
-                <br>
-                
+                <br>                
                 <p>LAT<br>(ผู้รับสินค้า) </p>                     
             </div>   
         </div>
