--- a/NAAN/report/blog/templates/blog/delivery_note.html
+++ b/NAAN/report/blog/templates/blog/delivery_note.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">       
         <title>Delivery Note</title>
-
         <style>
             body {
                 background: white; 
@@ -81,7 +80,7 @@
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 text-align: left;
                 font-size: 10px;
-                margin-left: 20px;
+                
             }
             table{
                 width: 100%;                
@@ -120,6 +119,7 @@
                 margin-bottom: 40%;
             }
             thead{
+                
                 display: table-header-group;
             }
             tbody{
@@ -158,13 +158,13 @@
                     </div>
                 </div>
                 <detail class="detail">
-                    <div class="container" style="margin-left: 20px; width:130%;">
+                    <div class="container" style="margin-left: 20px">
                         {% for obj in header_report %}
                         <div class="row ">
                             <div class="col-6" style="width: 50%; float: left;">
                                 <p><b>Delivery Date (วันที่ส่งสินค้า) :</b> {{ obj.delivery_date | date:'d M Y' }}</p>
                             </div>
-                            <div class="col-6" style="width: 50%; float: right;">
+                            <div class="col-6" style="width: 50%; float: left;">
                                 <div class="barcode-header">
                                     *{{ obj.dn_no }}*
                                 </div>
