--- a/NAAN/report/blog/templates/blog/truck_control.html
+++ b/NAAN/report/blog/templates/blog/truck_control.html
@@ -60,12 +60,14 @@
                 line-height: 10px;
             }
             .authorized{
-                font-family: 'Prompt', sans-serif;
+                margin-left: 40px;
+                margin-right: 40px;
+                margin-top: 40px;
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 text-align: center;
-                font-size: 12px;              
+                font-size: 10px;              
                 margin-block-start: 10%;
-                margin-bottom: 10%;
-                margin-top: 2%;
+                margin-bottom: 40%;
             }
 
             .page_right{
@@ -93,7 +95,7 @@
         <hr class="featurette-divider" style="margin-top: 5%;">
         <detail class="detail">
             <div class="container" style="margin-left: 10px">
-                {% for obj in header_list_report %}
+                {% for obj in header_report %}
                 <div class="row ">
                     <div class="col-6" style="width: 30%; float: left;">
                         <p><b>Truck No. (ทะเบียนรถ) :</b> {{ obj.truck_no.truck_no }}</p>
